--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -34,8 +34,8 @@ file.reference.mysql-connector-java-5.1.35-bin.jar=mysql-connector-java-5.1.35-b
 includes=**
 jar.compress=true
 javac.classpath=\
-    ${file.reference.mysql-connector-java-5.1.35-bin.jar}:\
-    ${file.reference.commons-codec-1.10.jar}
+    ${file.reference.commons-codec-1.10.jar}:\
+    ${file.reference.mysql-connector-java-5.1.35-bin.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
@@ -60,7 +60,7 @@ javadoc.splitindex=true
 javadoc.use=true
 javadoc.version=false
 javadoc.windowtitle=
-main.class=cookie.swipe.application.CookieSwipeApplication
+main.class=panda.prod.application.PandaProdApplication
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
